# srnj

./: .gitignore  README.md  environment.yml  pyproject.toml
data/res_files/: cn_eval_summary_k7.csv  cputime_k10.csv  cputime_k7.csv  inhouse_stats.csv  inhouse_time_estimates.csv  ort_metrics.csv  ort_selection_accuracy.csv  plot.R  real_10x_scores_medicc2.csv  real_10x_scores_medicc2_low.csv  real_10x_scores_sconce2.csv  stats_k10_l5.csv  stats_k7_l2.csv  stats_k7_l5.csv
reproducibility/experiments/: sparse_nj_accuracy.py
reproducibility/experiments/breast10x/: breast_data_medicc2.py  breast_data_sconce2.py  breast_region_E.ipynb
reproducibility/experiments/ort_selection/: ort_selection_accuracy.py  plot.R  plot_dataset.py  slurm_run.sh
reproducibility/workflows/srnj_sconce2/: README.md  results_K7
reproducibility/workflows/srnj_sconce2/config/: config.yaml  demo.yaml
reproducibility/workflows/srnj_sconce2/workflow/: Snakefile
scripts/: check_deps.sh  setup_sconce2.sh
src/sparsernj/: __init__.py  distance_provider.py  ort_selection.py  sparse_nj.py  sparse_rnj.py  treenode.py
src/sparsernj/utils/: math_utils.py  tree_utils.py  visualization.py
src/sparsernj/utils/algorithms/: neighbor_joining.py  tree_methods.py
src/sparsernj/utils/evaluation/: __init__.py
src/utils/: tree_simulation.py  tree_utils.py
src/utils/algorithms/: __init__.py  neighbor_joining.py  tree_methods.py
src/utils/evaluation/: benchmarking.py
src/utils/io/: __init__.py
tests/: test_newick_basic.py  test_newick_to_nx.py  test_treenode.py
(+20 files in other folders)
